feat: Add Projects section to main page

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@
   --main-black: #0b0e10;
 
   --header-height:50px;
+  --social-button-bg:#606060;
 }
 
 html.dark {
@@ -26,6 +27,8 @@ html.dark {
   --main-border-color: #555;
   --cursor-trail-shadow-8: rgba(255, 255, 255, 0.8);
   --cursor-trail-shadow-6: rgba(255, 255, 255, 0.6);
+
+  --social-button-bg:#4f4f4f;
 }
 
 * {
