--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ html.dark {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  cursor: none !important;
+  /* cursor: none !important; */
   user-select: none !important;
 }
 
